--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -105,7 +105,7 @@ body {
     color:blue;
 }
 .footer{
-    height: 100px;
+    height: 30px;
     width: 100%;
     background: linear-gradient(to top,#55ccff,blanchedalmond);
     position: fixed;
@@ -136,4 +136,10 @@ body {
     /*top: -50px;*/
     /*!*float: right;*!*/
 /*}*/
+
+.game {
+    width: 100%;
+    height: 320px;
+    margin-top: 50px;
+}
 
