--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -140,6 +140,7 @@ body {
 .game {
     width: 100%;
     height: 320px;
-    margin-top: 50px;
+    margin-bottom: 30px;
+    margin-left: 150px;
 }
 
