--- a/ng/src/app/base/app.base.data.css
+++ b/ng/src/app/base/app.base.data.css
@@ -20,6 +20,18 @@
     display: inline-block;
 }
 
+#y{
+    text-align: center;
+}
+
 .error_validate{
     color: red;
+}
+
+.check{
+    font-family: cursive;
+}
+.check:hover{
+    text-decoration: underline;
+    color: blue;
 }
