--- a/ng/src/app/header/app.header.html
+++ b/ng/src/app/header/app.header.html
@@ -1,6 +1,5 @@
-<div>
+
     <!--<img src="resources/pictures/cat.jpg">-->
-    <p>Лабораторная работа № 4 Вариант 75389
+    <p class="my_info">Лабораторная работа № 4 Вариант 75389
     <p>группа Р3211
     <p>Приступа Борис, Смирнова Анастасия
-</div>
