--- a/ng/src/app/duck/app.duck.html
+++ b/ng/src/app/duck/app.duck.html
@@ -1,6 +1,9 @@
-<div>
-    Упал сервер?
-    Значит, настало время уточек ...
+<div class="d_text">
+    <p>Упал сервер?
+    <p>Значит, настало время уточек ...
+</div>
+<div class="d_error">
+    Server error: <span class="d_error_cause"> {{cause}}</span>
 </div>
 
 <div class="game">
@@ -9,6 +12,7 @@
     </canvas>
 </div>
 
-<div>Вернуться и попробовать еще раз...
-    <button class="return" (click)="returnBack()">Return </button>
+<div class="d_return">Вернуться и попробовать еще раз?
+    <button class="return" (click)="returnBack()">return </button>
 </div>
+<script src="game.js"></script>
