--- a/ng/src/app/app.component.css
+++ b/ng/src/app/app.component.css
@@ -9,6 +9,13 @@ header{
     text-align: center;
 
     background: linear-gradient(to top,blanchedalmond,#55ccff);
+
+    display: flex;
+    justify-content: space-around;
+
+    z-index: 1;
+
+    /*flex-wrap: wrap;*/
 }
 
 
@@ -16,22 +23,28 @@ header{
 authorization{
     background: blanchedalmond;
     position: absolute;
+    width: 100%;
+    top: 20%;
 
-    top: 25%;
-    left: 40%;
-    width: 400px;
     max-height: 70%;
-
 
     text-align: center;
     font-family: cursive;
 
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+
+    z-index: 1;
 }
 
 data{
     position: absolute;
     top: 25%;
-    max-height: 70% ;
+    max-height: 80%;
+    width: 100%;
+
+    z-index: 1;
 }
 
 footer{
@@ -47,6 +60,7 @@ footer{
     font-size: large;
     font-family: cursive;
 
+    z-index: 1;
 }
 
 
@@ -58,12 +72,5 @@ footer{
     footer{
         font-size: small;
     }
-
-    authorization{
-        width: 150px;
-        left: 25%;
-    }
-
-
 
 }
