--- a/ng/src/app/header/app.header.html
+++ b/ng/src/app/header/app.header.html
@@ -1,5 +1,15 @@
 
     <!--<img src="resources/pictures/cat.jpg">-->
-    <p class="my_info">Лабораторная работа № 4 Вариант 75389
-    <p>группа Р3211
-    <p>Приступа Борис, Смирнова Анастасия
+    <div class="lab_work">
+        <p>Лабораторная
+        <p>Работа № 4
+    </div>
+        <div class="general">
+        <p>Вариант 75389
+        <p>группа Р3211
+        </div>
+    <div class="names">
+        <p>Приступа Борис,
+        <p>Смирнова Анастасия
+    </div>
+
