--- a/ng/src/app/duck/app.duck.css
+++ b/ng/src/app/duck/app.duck.css
@@ -22,6 +22,8 @@
 
 .game{
     display: block;
+    /*width: 80%;*/
+    height: 320px;
 }
 
 .return{
@@ -30,4 +32,9 @@
 .return:hover{
     text-decoration: underline;
     color: blue;
+}
+
+#game_canvas {
+    /*width: 100%;*/
+    height: 320px;
 }
